[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Themes/Theme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/Interface.gd" type="Script" id=2]
[ext_resource path="res://GUI/BuildMenu/BuildMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/Build/Construct.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TapArea" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TapArea"]
margin_right = 240.0
margin_bottom = 360.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="SafeZone" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildMenu" parent="SafeZone" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 20.0
margin_right = 230.0
margin_bottom = 94.0
mouse_filter = 2

[node name="Construct" parent="SafeZone" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 20.0
margin_right = 230.0
margin_bottom = 330.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="TapArea/Button" to="." method="_on_TapAreaButton_pressed"]
[connection signal="construct_button_pressed" from="SafeZone/BuildMenu" to="." method="_on_BuildMenu_construct_button_pressed"]
[connection signal="hide_menu" from="SafeZone/BuildMenu" to="." method="_on_BuildMenu_hide_menu"]
[connection signal="show_menu" from="SafeZone/BuildMenu" to="." method="_on_BuildMenu_show_menu"]
